--- a/index.html
+++ b/index.html
@@ -1,10 +1,9 @@
 <!DOCTYPE html>
 	<head>
 		<meta charset="utf-8">
-		<title>Transfer Assist</title>
+		<title>Home | Transfer Assist</title>
 		<link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
 		<link rel="stylesheet" href="styles.css">
-		<script src="processing.js"></script>
 		
 	</head>
 	<body>
@@ -12,7 +11,9 @@
 			<h2>Transfer Assist</h2>
 		</header> 
 		<p>Sample Text </p>
-		<a href="https://t7r1.github.io/Tendron/">Tendrion Spores</a>
+	<!-- <nav>
+		<a href=
+	</nav> -->
 		<br>		<br>
 
 	
