Describe what you changed

--- a/MyColleges.html
+++ b/MyColleges.html
@@ -4,21 +4,18 @@
 		<title>MyColleges | Transfer Assist</title>
 		<link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
 		<link rel="stylesheet" href="styles.css">
-		
 	</head>
 	<body>
 		<header>
 			<h2>Transfer Assist</h2>
 		</header> 
-		<p>Sample Text </p>
-	
+		<p>My Colleges </p>
+	 <nav>
+		<a href="index.html">Home</a>
+		<p>My Colleges</p>
+		<a href="Schedule.html">Schedules</a>
+	</nav>
 		<br>		<br>
-
-	
-		
-<!-- 			<section id="content">
-				<canvas id="stuff" data-processing-sources="stuff.pde">
-				</canvas> -->
 		    </section>
 	    <footer>
 	    </footer>
