--- a/Schedule.html
+++ b/Schedule.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 	<head>
 		<meta charset="utf-8">
-		<title>Home | Transfer Assist</title>
+		<title>MyColleges | Transfer Assist</title>
 		<link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
 		<link rel="stylesheet" href="styles.css">
 	</head>
@@ -9,12 +9,8 @@
 		<header>
 			<h2>Transfer Assist</h2>
 		</header> 
-		<p>Home </p>
-	 <nav>
-		<p>Home</p>
-		<a href="MyColleges.html">My Colleges</a>
-		<a href="Schedule.html">Schedules</a>
-	</nav>
+		<p>Schedule </p>
+	
 		<br>		<br>
 		    </section>
 	    <footer>
