improve nav bar

--- a/MyColleges.html
+++ b/MyColleges.html
@@ -7,12 +7,12 @@
 	</head>
 	<body>
 		<header>
-			<h2>Transfer Assist</h2>
+			<h1>Transfer Assist</h1>
 		</header> 
 		<p>My Colleges </p>
 	 <nav>
 		<a href="index.html">Home</a>
-		<p>My Colleges</p>
+		<a href="MyColleges.html">My Colleges</a>
 		<a href="Schedule.html">Schedules</a>
 	</nav>
 		<br>		<br>
