--- a/index.html
+++ b/index.html
@@ -6,15 +6,27 @@
 		<link rel="stylesheet" href="styles.css">
 	</head>
 	<body>
-		<header>
-			<h2>Transfer Assist</h2>
-		</header> 
-		<p>Home </p>
-	 <nav>
-		<p>Home</p>
-		<a href="MyColleges.html">My Colleges</a>
-		<a href="Schedule.html">Schedules</a>
-	</nav>
+		<div class="header">
+			<nav>
+				<span class="title">Transfer Assist</span>
+				<a href="index.html">Home</a>
+				<a href="MyColleges.html">My Colleges</a>
+				<a href="Schedule.html">Schedules</a>
+			</nav>
+		</div>
+		<h2>Home </h2>
+		<p>Welcome to Transfer Assist, your personal transfer assistant</p>
+			<h2>About Us</h2>
+			<p>Transfer Assist is an online tool for transfer students applying to college. 
+				Transfer Assist uses information provided by Assist.org to generate efficient, 
+				practical, and ambitious schedule plans based on the needs of the student. 
+				Transfer Assist generates multiple education plans consisting of classes that 
+				meet multiple criteria for the student to choose from. This tool not only helps 
+				students, but also counselors, parents, and even colleges as they work on 
+				setting standards for what they want in their students.
+				</p>>
+</p>
+	 
 		<br>		<br>
 		    </section>
 	    <footer>
