--- a/Schedule.html
+++ b/Schedule.html
@@ -6,12 +6,17 @@
 		<link rel="stylesheet" href="styles.css">
 	</head>
 	<body>
-		<header>
-			<h2>Transfer Assist</h2>
-		</header> 
+		<div class="header">
+			<nav>
+				<span class="title">Transfer Assist</span>
+				<a href="index.html">Home</a>
+				<a href="MyColleges.html">My Colleges</a>
+				<a href="Schedule.html">Schedules</a>
+			</nav>
+		</div>
 		<p>Schedule </p>
-	
-		<br>		<br>
+		<br>		
+		<br>
 		    </section>
 	    <footer>
 	    </footer>
