--- a/Schedule.html
+++ b/Schedule.html
@@ -14,11 +14,23 @@
 				<a href="Schedule.html">Schedules</a>
 			</nav>
 		</div>
-		<p>Schedule </p>
-		<br>		
-		<br>
+		<h1>Schedule </h1>
+		<h2>Major</h2>
+		
+			<h2>College Selection</h2>
+			<input type="text" id="input" placeholder="Enter your school..."> 
+		<button id="btn">Add Item</button>
+			<ol id="myList">
+        <li>College 1</li>
+        
+		<!-- <input type="text" id="input" placeholder="Enter your school..."> 
+		<button id="addBtn">Add Item</button> -->
+    </ol>
+	 
+		<br>		<br>
 		    </section>
 	    <footer>
 	    </footer>
+		<script src="script.js"></script>
 	</body>
 </html>
