--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
 				<a href="Schedule.html">Schedules</a>
 			</nav>
 		</div>
-		<h2>Home </h2>
+		<h1>Home </h1>
 		<p>Welcome to Transfer Assist, your personal transfer assistant</p>
-			<h2>About Us</h2>
+			<h1>About Us</h1>
 			<p>Transfer Assist is an online tool for transfer students applying to college. 
 				Transfer Assist uses information provided by Assist.org to generate efficient, 
 				practical, and ambitious schedule plans based on the needs of the student. 
@@ -25,11 +25,13 @@
 				students, but also counselors, parents, and even colleges as they work on 
 				setting standards for what they want in their students.
 				</p>>
-</p>
 	 
 		<br>		<br>
 		    </section>
 	    <footer>
 	    </footer>
+		        <script src="my-script.js"></script>
+
 	</body>
 </html>
+
