--- a/Schedule.html
+++ b/Schedule.html
@@ -18,15 +18,12 @@
 		<h2>Major</h2>
 		
 			<h2>College Selection</h2>
-			<input type="text" id="input" placeholder="Enter your school..."> 
-		<button id="btn">Add Item</button>
-			<ol id="myList">
-        <li>College 1</li>
-        
-		<!-- <input type="text" id="input" placeholder="Enter your school..."> 
-		<button id="addBtn">Add Item</button> -->
+			
+			<div class="scrollBox">
+			<ol id="collegeCheckList">
+        <li> 1</li>
     </ol>
-	 
+	 </div>
 		<br>		<br>
 		    </section>
 	    <footer>
