almost worse than no value

--- a/MyColleges.html
+++ b/MyColleges.html
@@ -14,20 +14,95 @@
 				<a href="Schedule.html">Schedules</a>
 			</nav>
 		</div>
-		<p>My Colleges </p>
+		<p>My Colleges</p>
 		<div class="collegeDropdown">
-		<label for="collegeSelect">Choose a college:</label>
-		<select id="collegeSelect">
-		<option value="ucla">UCLA</option>
-		<option value="ucb">UC Berkeley</option>
-		<option value="ucsd">UC San Diego</option>
+			<label for="collegeSelect">Current college:</label>
+			<select id="collegeSelect">
+				<option value="">-- Please choose a college --</option>
+				<option value="university-of-california-berkeley">University of California, Berkeley (UC Berkeley)</option>
+				<option value="university-of-california-davis">University of California, Davis (UC Davis)</option>
+				<option value="university-of-california-irvine">University of California, Irvine (UC Irvine)</option>
+				<option value="university-of-california-los-angeles">University of California, Los Angeles (UCLA)</option>
+				<option value="university-of-california-merced">University of California, Merced (UC Merced)</option>
+				<option value="university-of-california-riverside">University of California, Riverside (UC Riverside)</option>
+				<option value="university-of-california-san-diego">University of California, San Diego (UC San Diego)</option>
+				<option value="university-of-california-san-francisco">University of California, San Francisco (UC San Francisco)</option>
+				<option value="university-of-california-santa-barbara">University of California, Santa Barbara (UC Santa Barbara)</option>
+				<option value="university-of-california-santa-cruz">University of California, Santa Cruz (UC Santa Cruz)</option>
+				<option value="california-state-university-bakersfield">California State University, Bakersfield</option>
+				<option value="california-state-university-channel-islands">California State University, Channel Islands</option>
+				<option value="california-state-university-chico">California State University, Chico</option>
+				<option value="california-state-university-dominguez-hills">California State University, Dominguez Hills</option>
+				<option value="california-state-university-east-bay">California State University, East Bay</option>
+				<option value="california-state-university-fresno">California State University, Fresno (Fresno State)</option>
+				<option value="california-state-university-fullerton">California State University, Fullerton</option>
+				<option value="california-state-polytechnic-university-humboldt">California State Polytechnic University, Humboldt (Cal Poly Humboldt)</option>
+				<option value="california-state-university-long-beach">California State University, Long Beach</option>
+				<option value="california-state-university-los-angeles">California State University, Los Angeles</option>
+				<option value="california-state-university-maritime-academy">California State University Maritime Academy</option>
+				<option value="california-state-university-monterey-bay">California State University, Monterey Bay</option>
+				<option value="california-state-university-northridge">California State University, Northridge (CSUN)</option>
+				<option value="california-state-polytechnic-university-pomona">California State Polytechnic University, Pomona (Cal Poly Pomona)</option>
+				<option value="california-state-university-sacramento">California State University, Sacramento (Sacramento State)</option>
+				<option value="california-state-university-san-bernardino">California State University, San Bernardino</option>
+				<option value="san-diego-state-university">San Diego State University</option>
+				<option value="san-francisco-state-university">San Francisco State University</option>
+				<option value="san-jose-state-university">San Jose State University</option>
+				<option value="california-polytechnic-state-university-san-luis-obispo">California Polytechnic State University, San Luis Obispo (Cal Poly SLO)</option>
+				<option value="sonoma-state-university">Sonoma State University</option>
+				<option value="california-state-university-stanislaus">California State University, Stanislaus</option>
+				<option value="california-state-university-san-marcos">California State University San Marcos</option>
+				<option value="stanford-university">Stanford University</option>
+				<option value="california-institute-of-technology">California Institute of Technology (Caltech)</option>
+				<option value="university-of-southern-california">University of Southern California (USC)</option>
+				<option value="pepperdine-university">Pepperdine University</option>
+				<option value="loyola-marymount-university">Loyola Marymount University</option>
+				<option value="university-of-san-diego">University of San Diego</option>
+				<option value="university-of-the-pacific">University of the Pacific</option>
+				<option value="santa-clara-university">Santa Clara University</option>
+				<option value="chapman-university">Chapman University</option>
+				<option value="university-of-la-verne">University of La Verne</option>
+				<option value="occidental-college">Occidental College</option>
+				<option value="claremont-colleges">Claremont Colleges:</option>
+				<option value="pomona-college">Pomona College</option>
+				<option value="claremont-mckenna-college">Claremont McKenna College</option>
+				<option value="harvey-mudd-college">Harvey Mudd College</option>
+				<option value="pitzer-college">Pitzer College</option>
+				<option value="scripps-college">Scripps College</option>
+				<option value="claremont-graduate-university">Claremont Graduate University</option>
+				<option value="biola-university">Biola University</option>
+				<option value="azusa-pacific-university">Azusa Pacific University</option>
+				<option value="point-loma-nazarene-university">Point Loma Nazarene University</option>
+				<option value="california-baptist-university">California Baptist University</option>
+				<option value="westmont-college">Westmont College</option>
+				<option value="dominican-university-of-california">Dominican University of California</option>
+				<option value="whittier-college">Whittier College</option>
+				<option value="mills-college">Mills College (historic; merged with Northeastern University)</option>
+				<option value="university-of-redlands">University of Redlands</option>
+				<option value="humboldt-state">Humboldt State (listed above as Cal Poly Humboldt)</option>
+				<option value="pepperdine-university-2">Pepperdine University</option>
+				<option value="alliant-international-university">Alliant International University</option>
+				<option value="thomas-aquinas-college">Thomas Aquinas College (CA campus)</option>
+				<option value="holy-names-university">Holy Names University (closed 2023; historical)</option>
+				<option value="university-of-san-francisco">University of San Francisco</option>
+				<option value="saint-marys-college-of-california">Saint Mary’s College of California</option>
+				<option value="california-college-of-the-arts">California College of the Arts</option>
+				<option value="mount-saint-marys-university">Mount Saint Mary’s University (Los Angeles)</option>
+				<option value="mills-college-northeastern">Mills College at Northeastern (see note)</option>
+				<option value="samuel-merritt-university">Samuel Merritt University</option>
+				<option value="keck-graduate-institute">Keck Graduate Institute</option>
+				<option value="soka-university-of-america">Soka University of America</option>
+				<option value="vanguard-university-of-southern-california">Vanguard University of Southern California</option>
+				<option value="western-university-of-health-sciences">Western University of Health Sciences</option>
+				<option value="azusa-pacific-university-2">Azusa Pacific University</option>
+			</select>
 		</div>
-		</select>
-		<input type="text" id="input" placeholder="Enter your school..."> 
-		<button id="btn">Add Item</button>
-		<ol id="myList">
-        	<li>College 1</li>
-   		</ol>
+		<div class="CollegeList">My College List
+			<input type="text" id="input" placeholder="Find a school..."> 
+			<button id="btn">Add Item</button>
+			<ol id="myList">
+			</ol>
+		</div>
 		    </section>
 	    <footer>
 		</footer>
