some formatting changes and fixed schedule dropdown menu

--- a/MyColleges.html
+++ b/MyColleges.html
@@ -10,11 +10,11 @@
 			<nav>
 				<span class="title">Transfer Assist</span>
 				<a href="index.html">Home</a>
-				<a href="MyColleges.html">My Colleges</a>
+				<a href="MyColleges.html" class="MyColleges">My Colleges</a>
 				<a href="Schedule.html">Schedules</a>
 			</nav>
 		</div>
-		<p>My Colleges</p>
+		<h1>My Colleges</h1>
 		<div class="collegeDropdown">
 			<label for="collegeSelect">Current college:</label>
 			<select id="collegeSelect">
@@ -97,7 +97,9 @@
 				<option value="azusa-pacific-university-2">Azusa Pacific University</option>
 			</select>
 		</div>
-		<div class="CollegeList">My College List
+		<div class="CollegeList">
+			<br class="smallLine">
+			My College List
 			<input type="text" id="input" placeholder="Find a school..."> 
 			<button id="btn">Add Item</button>
 			<ol id="myList">
