--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 		<div class="header">
 			<nav>
 				<span class="title">Transfer Assist</span>
-				<a href="index.html">Home</a>
+				<a href="index.html" class="home">Home</a>
 				<a href="MyColleges.html">My Colleges</a>
 				<a href="Schedule.html">Schedules</a>
 			</nav>
@@ -24,9 +24,7 @@
 				meet multiple criteria for the student to choose from. This tool not only helps 
 				students, but also counselors, parents, and even colleges as they work on 
 				setting standards for what they want in their students.
-				</p>>
-	 
-		<br>		<br>
+				</p>
 		    </section>
 	    <footer>
 	    </footer>
